JVM crashes while generating appcds for classpath with empty directory entry

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b36
    • Verified

      The bug is easily reproduced by following command:
      mkdir empty;
       /scratch/jenkins/workspace/hs-bigapps-ci/build/linux-x64/images/jdk/bin/java -server -XX:+UnlockCommercialFeatures -XX:+UseAppCDS -cp ./empty -XX:SharedArchiveFile=./SharedStringsBasic.jsa -Xshare:dump

            Assignee:
            Ioi Lam
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: