8190809: JVM crashes while generating appcds for classpath with empty directory entry

Reviewed-by: ccheung, jiangli, lmesnik